--- a/src/main/resources/templates/clubs-detail.html
+++ b/src/main/resources/templates/clubs-detail.html
@@ -3,6 +3,7 @@
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorate="~{layout}">
 <head>
+  <meta charset="UTF-8">
   <title>Club Create</title>
 </head>
 <body class="d-flex flex-column " >
@@ -31,6 +32,7 @@
               <h2 class="card-title">About this club</h2>
               <p class="card-text" th:text ="${club.content}"></p>
               <a class="btn btn-primary" th:href="@{/clubs/{clubId}/delete(clubId=${club.id})}">Delete</a>
+              <a class="btn btn-primary" th:href="@{/events/{clubId}/new(clubId=${club.id})}">Create Event</a>
             </div>
           </div>
           <!-- Nested row for non-featured blog posts-->
