--- a/src/main/resources/templates/clubs-list.html
+++ b/src/main/resources/templates/clubs-list.html
@@ -4,6 +4,7 @@
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorate="~{layout}">
 <head>
+    <meta charset="UTF-8">
     <title>Club List</title>
 </head>
 <body class="d-flex flex-column h-100">
