--- a/src/main/resources/templates/events-edit.html
+++ b/src/main/resources/templates/events-edit.html
@@ -1,6 +1,6 @@
-<html
-        lang="en"
-        xmlns:th="http://www.thymeleaf.org"
+<html lang="en"
+
+        xmlns:th="http://thymeleaf.org"
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorate="~{layout}">
 <head>
@@ -10,9 +10,8 @@
 <body class="d-flex flex-column h-100">
 <main class="flex-shrink-0">
     <section layout:fragment="body" class="py-5">
-
         <div class="container">
-            <form role="form" method="post" th:action="@{/events/{clubId}(clubId=${clubId})}" th:object="${event}">
+            <form role="form" method="post" th:action="@{/events/{eventId}/edit(eventId=${eventId})}" th:object="${event}">
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="name">Name</label>
