--- a/src/main/resources/templates/events-detail.html
+++ b/src/main/resources/templates/events-detail.html
@@ -1,7 +1,7 @@
-<html   lang="en"
-        xmlns:th="http://thymeleaf.org"
-        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-        layout:decorate="~{layout}">
+<html lang="en"
+      xmlns:th="http://thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 <head>
     <meta charset="UTF-8">
     <title>Club Create</title>
@@ -24,14 +24,15 @@
             <div class="col-lg-8">
                 <!-- Featured blog post-->
                 <div class="card mb-4">
-                    <a href="#!"><img class="card-img-top" th:src="${event.photoUrl}" alt="..." /></a>
+                    <a href="#!"><img class="card-img-top" th:src="${event.photoUrl}" alt="..."/></a>
                     <div class="card-body">
                         <div class="small text-muted" th:text="${event.createdOn}"></div>
                         <h2 class="card-title">About this running event</h2>
                         <p class="card-text" th:text="${event.type}"></p>
-<!--                        <div th:if="${user.id} == ${event.club.createdBy.id}">-->
-                            <a class="btn btn-primary" th:href="@{/events/{eventId}/delete(eventId=${event.id})}">Delete</a>
-<!--                        </div>-->
+                        <div th:if="${user.id} == ${event.club.createdBy.id}">
+                            <a class="btn btn-primary"
+                               th:href="@{/events/{eventId}/delete(eventId=${event.id})}">Delete</a>
+                        </div>
                     </div>
                 </div>
                 <!-- Side widgets-->
@@ -41,7 +42,8 @@
                         <div class="card-header">Search</div>
                         <div class="card-body">
                             <div class="input-group">
-                                <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
+                                <input class="form-control" type="text" placeholder="Enter search term..."
+                                       aria-label="Enter search term..." aria-describedby="button-search"/>
                                 <button class="btn btn-primary" id="button-search" type="button">Go!</button>
                             </div>
                         </div>
@@ -64,7 +66,9 @@
                     <!-- Side widget-->
                     <div class="card mb-4">
                         <div class="card-header">Side Widget</div>
-                        <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
+                        <div class="card-body">You can put anything you want inside of these side widgets. They are easy
+                            to use, and feature the Bootstrap 5 card component!
+                        </div>
                     </div>
                 </div>
             </div>
